gcc/testsuite/gdc.test/fail_compilation/imports/test13152f.d
public import imports.test13152a;
public import imports.test13152b;
public import imports.test13152c;
public import imports.test13152d;
public import imports.test13152e;
public import imports.test13152f;
public import imports.test13152g;
public import imports.test13152h;
public import imports.test13152i;
public import imports.test13152j;
public import imports.test13152k;
public import imports.test13152l;
public import imports.test13152m;
public import imports.test13152n;
public import imports.test13152o;
public import imports.test13152p;
public import imports.test13152q;
public import imports.test13152r;
public import imports.test13152s;
public import imports.test13152t;
public import imports.test13152u;
public import imports.test13152v;
public import imports.test13152w;
public import imports.test13152x;
public import imports.test13152y;
public import imports.test13152z;
